--- a/default.html
+++ b/default.html
@@ -1,5 +1,12 @@
 <!doctype html>
 <html>
+    <head>
+        <style>
+            * {
+                color : red;
+            }
+        </style>
+    </head>
 <body>
 <h1>
     My web site
