--- a/default.html
+++ b/default.html
@@ -12,6 +12,7 @@
 	<h1>
 		My web site
 	</h1>
+	<a href="page1.html">Page 1</a>
 	<a href="page2.html">Page 2</a>
     <a href="page3.html">Page 3</a>
 </body>
