--- a/default.html
+++ b/default.html
@@ -18,5 +18,8 @@
 		<a href="page2.html">Page 2</a>
 		<a href="page3.html">Page 3</a>
 	</nav>
+	<footer>
+		Copyright 2021
+	</footer>
 </body>
 </html>
