add gray back on default

--- a/default.html
+++ b/default.html
@@ -5,6 +5,7 @@
         <style>
             * {
                 color : red;
+				background-color : gray;
             }
         </style>
     </head>
