add article to page1

--- a/page1.html
+++ b/page1.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
 <body>
-<h1>
-    Page 1
-</h1>
+	<h1>
+		Page 1
+	</h1>
+	<article>
+		Page 1 article
+	</article>
+
 	<footer>
 		Copyright 2021
 	</footer>
