--- a/page2.html
+++ b/page2.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
 <body>
-<h1>
-    Page 2
-</h1>
+	<h1>
+		Page 2
+	</h1>
+	<article>
+		Page 2 article
+	</article>
 	<footer>
 		Copyright 2021
 	</footer>
