--- a/default.html
+++ b/default.html
@@ -6,6 +6,7 @@
             * {
                 color : red;
 				background-color : gray;
+				font-size : 20px;
             }
         </style>
     </head>
